--- a/index.html
+++ b/index.html
@@ -1,1 +1,38 @@
-hello world
+<!DOCTYPE html>
+<!--[if lt IE 7 ]> <html class="ie ie6 no-js" lang="en"> <![endif]-->
+<!--[if IE 7 ]>    <html class="ie ie7 no-js" lang="en"> <![endif]-->
+<!--[if IE 8 ]>    <html class="ie ie8 no-js" lang="en"> <![endif]-->
+<!--[if IE 9 ]>    <html class="ie ie9 no-js" lang="en"> <![endif]-->
+<!--[if gt IE 9]><!--><html class="no-js" lang="pt-br"><!--<![endif]-->
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"> 
+        <title>Ícaro Jerry</title>
+            <link rel="shortcut icon" type="image/x-icon" href="resources/images/favicon.svg"/>
+        <link href="https://fonts.googleapis.com/css?family=Play|Lobster" rel="stylesheet" type="text/css">
+        <link rel="stylesheet" type="text/css" href="resources/css/background-slider.css" />
+        <link rel="stylesheet" type="text/css" href="resources/css/main-style.css" />
+    </head>
+    <body id="page">
+        <ul class="cb-slideshow">
+            <li><span>01</span></li><!--slide de apresentacao -->
+        </ul>
+
+        <div class="container">
+                <div id="introduction">
+                    <h1>Antonio Carlos</h1>
+                        <h3></h3> <!--breve descricao -->
+                </div>
+
+                <div id="contacts">
+                        <a href="https://www.facebook.com/antoniofrei" target="_blank"><img src="resources/images/facebook-logo.svg" id="facebook" class="logo" title="Facebook"></a>
+                        <a href="mailto:antoniofrei@gmail.com" target="_blank"><img src="resources/images/email-logo.svg" id="email" class="logo" title="E-mail (antoniofrei@gmail.com)"></a>
+                        <a href="https://gitlab.com/antoniofrei" target="_blank"><img src="resources/images/gitlab-logo.svg" id="gitlab" class="logo" title="GitLab"></a>
+                        <a href="https://github.com/antoniofrei" target="_blank"><img src="resources/images/github-logo.svg" id="github" class="logo" title="Github"></a>
+                        <a href="" target="_blank"><img src="resources/images/linkedin-logo.svg" id="linkedin" class="logo" title="LinkedIn"></a>
+                        <a href="http://buscatextual.cnpq.br/buscatextual/visualizacv.do?id=K8137796D0" target="_blank"><img src="resources/images/lattes-logo.svg" id="lattes" class="logo" title="Currículo Lattes"></a>
+                        <a href="curriculo.html" target="_blank"><img src="resources/images/curriculo-logo.svg" id="curriculo" class="logo" title="Currículo"></a>
+                </div>
+        </div>
+    </body>
+</html>
