alterando titulo da pagina

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"> 
-        <title>Ícaro Jerry</title>
+        <title>Antonio Carlos</title>
             <link rel="shortcut icon" type="image/x-icon" href="resources/images/favicon.svg"/>
         <link href="https://fonts.googleapis.com/css?family=Play|Lobster" rel="stylesheet" type="text/css">
         <link rel="stylesheet" type="text/css" href="resources/css/background-slider.css" />
